<resources>
    <string name="feature_name">news_details_feature_impl</string>

    <string name="source_button_title">Перейти к источнику</string>
    <string name="date_title">Дата издания</string>

    <string name="no_information_available_title">Отсутствует</string>

    <string name="other_exception_title">Возникла ошибка при работе приложения!</string>

    <string name="back_button_desc">Вернуться назад</string>
    <string name="news_image_description">Фото новости</string>

    <string name="tools_time_title">Nov 1, 2022 10:23:00</string>
    <string name="tools_current_date_title">Wednesday, November, 12</string>

    <string name="empty" />
    <string name="tools_content">Состоялся официальный релиз долгожданного шутера Call of Duty: Modern Warfare II. Если кто-то по каким-либо причинам думал, что перед нами простой ремейк, то это не так. По сути, это новая история с теми же персонажами, имеющая общие корни, но по фак...</string>
    <string name="share_title">Поделиться</string>
    <string name="main_title">Публикация</string>

</resources>